--- a/graphql-order-server/package.json
+++ b/graphql-order-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-order-server",
+  "name": "graphql-store-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.3.1",
-    "graphql": "^14.1.1",
-    "loadash": "^1.0.0"
+    "graphql": "^14.1.1"
   }
 }
