--- a/graphql-survey-server/package.json
+++ b/graphql-survey-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-store-server",
+  "name": "graphql-order-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.3.1",
-    "graphql": "^14.1.1"
+    "graphql": "^14.1.1",
+    "loadash": "^1.0.0"
   }
 }
